0.1-alpha3/_sources/gene/AGAP007361.rst.txt
:orphan:



AGAP007361
==========

Location: **2L:46,056,762-46,061,322**



Description: **Translocation protein sec63**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP007361>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2L:46056762-46061322#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/BFS/2/6/index`
      - IHS
      - Burkina Faso *An. gambiae*
      - 2L:46,034,895-46,214,895
      - 221
      - 96.2%
      - nan
    * - :doc:`../signal/IHS/CMS/2/7/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2L:46,054,895-46,094,895
      - 98
      - 77.4%
      - nan
    






Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP007361';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


